[package]
name = "minimal-vello-glitch-example"
version = "0.1.0"
authors = ["Watashi <watashi@example.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "minimal_vello_glitch_example"
path = "gen/bin/desktop.rs"

[dependencies]
vello = "0.3.0"
winit = { version = "0.30.5", features = [ "android-native-activity" ] }
anyhow = "1.0.89"
pollster = "0.3.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "1.11.0"

[profile.dev]
opt-level = 3
